--- a/index.html
+++ b/index.html
@@ -1,158 +1,154 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="utf-8" />
-<title>Pivot Prakiraan Cuaca (robust)</title>
-<style>
-  body{font-family:Arial,Helvetica,sans-serif;padding:16px}
-  table{border-collapse:collapse;width:100%;font-size:13px}
-  th,td{border:1px solid #ccc;padding:6px;text-align:center}
-  th{background:#efefef}
-  .kab{font-weight:600;text-align:left}
-  pre.err{background:#fee;border:1px solid #fbb;padding:8px;overflow:auto}
-</style>
+  <meta charset="utf-8" />
+  <title>Viewer Prakiraan (3-jam) — Per Kabupaten</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <style>
+    body{font-family:system-ui,Arial,Segoe UI,Roboto; margin:16px; background:#f6f8fb; color:#111}
+    h1{margin:0 0 8px;text-align:center}
+    .top {display:flex;gap:12px;align-items:center;justify-content:center;flex-wrap:wrap;margin-bottom:12px}
+    select,input,button{padding:8px 10px;border-radius:8px;border:1px solid #d0d7e0}
+    .layout {display:grid; grid-template-columns: 1fr 480px; gap:16px; align-items:start}
+    .card {background:#fff;border-radius:10px;padding:12px;box-shadow:0 4px 18px rgba(18,38,63,0.06)}
+    table{width:100%;border-collapse:collapse;font-size:13px}
+    th,td{padding:8px 6px;border-bottom:1px solid #eee;text-align:left}
+    th{background:#f3f6fb;position:sticky;top:0}
+    .small{font-size:12px;color:#666}
+    .right{text-align:right}
+    .muted{color:#666;font-size:13px}
+    .controls-row{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
+    canvas{max-width:100%}
+    .download {margin-left:auto}
+    @media(max-width:940px){ .layout{grid-template-columns:1fr} }
+
+    /* --- Style tombol --- */
+    button {
+      background:#2c7be5;
+      color:#fff;
+      border:none;
+      border-radius:6px;
+      cursor:pointer;
+      font-weight:600;
+      box-shadow:0 2px 4px rgba(0,0,0,0.1);
+      transition:background 0.2s;
+    }
+    button:hover { background:#1a5fb4; }
+  </style>
 </head>
 <body>
-  <h3>Pivot Prakiraan Cuaca — tampil per kabupaten × waktu</h3>
-  <div>
-    JSON file: <input id="jsonFile" value="prakiraan_kabupaten_full3jam.json" style="width:320px"/>
-    <button id="btnLoad">Muat & Tampilkan</button>
+  <h1>Prakiraan Cuaca Per Kabupaten (slot 3-jam)</h1>
+
+  <div class="top">
+    <div class="controls-row card">
+      <label>File JSON:
+        <input id="dataFile" type="text" value="prakiraan_kabupaten_full3jam.json" style="width:260px" />
+      </label>
+      <button id="loadBtn">Muat Data</button>
+
+      <label>Kabupaten:
+        <select id="kabSelect" style="min-width:260px"></select>
+      </label>
+
+      <label>Filter cuaca:
+        <input id="filterCuaca" placeholder="kata kunci cuaca (mis. Hujan)" />
+      </label>
+
+      <button id="toCsv" class="download">Download CSV</button>
+    </div>
   </div>
-  <div id="status" style="margin-top:10px;color:#444"></div>
-  <div id="container" style="margin-top:12px"></div>
 
-<script>
-// ---------- util ----------
-function escapeHtml(s){
-  return String(s).replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;");
-}
+  <div class="layout">
+    <div class="card">
+      <div style="display:flex;gap:12px;align-items:center;justify-content:space-between;margin-bottom:8px">
+        <div class="muted" id="metaInfo">Belum memuat data</div>
+        <div class="small">Jumlah slot: <span id="slotCount">0</span></div>
+      </div>
 
-// parse label like "08 Sep 2025 08:00" OR "08 Sep 08:00"
-// returns Date or null
-function parseLabelDate(label){
-  if(!label) return null;
-  // take part before an en-dash / hyphen if present
-  let part = label.split('–')[0].trim();
-  // remove weekday prefix like "Fri," if present
-  part = part.replace(/^[A-Za-z]+,\s*/,"");
+      <div style="overflow:auto;max-height:560px">
+        <table id="table">
+          <thead>
+            <tr><th>Waktu (start–end)</th><th>Cuaca</th><th class="right">Suhu (°C)</th><th class="right">Kelembapan (%)</th></tr>
+          </thead>
+          <tbody id="tbody">
+            <tr><td colspan="4" class="small">Belum ada data — klik "Muat Data"</td></tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
 
-  // try pattern: DD Mon YYYY HH:MM  OR DD Mon HH:MM
-  const m = part.match(/^(\d{1,2})\s+([A-Za-z]{3,})\s*(\d{4})?\s+(\d{1,2}):(\d{2})$/);
-  const monthMap = {jan:0,feb:1,mar:2,apr:3,may:4,jun:5,jul:6,aug:7,sep:8,oct:9,nov:10,dec:11};
-  if(m){
-    const day = parseInt(m[1],10);
-    let monStr = m[2].toLowerCase();
-    // accept full month names too (e.g. September) -> take first 3 letters
-    if(monStr.length>3) monStr = monStr.slice(0,3);
-    const year = m[3] ? parseInt(m[3],10) : (new Date()).getFullYear();
-    const hh = parseInt(m[4],10), mm = parseInt(m[5],10);
-    const mon = monthMap[monStr] ?? 0;
-    return new Date(year, mon, day, hh, mm);
-  }
+    <div class="card">
+      <div style="margin-bottom:8px">
+        <div class="small">Grafik suhu & kelembapan (min/max)</div>
+      </div>
+      <canvas id="chart" height="300"></canvas>
+      <div style="margin-top:10px" class="small muted">Catatan: jika rentang suhu/kelembapan kosong, titik dihilangkan.</div>
+    </div>
+  </div>
 
-  // fallback: try Date.parse on the trimmed string
-  const d = new Date(part);
-  return isNaN(d) ? null : d;
-}
+  <!-- Chart.js CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-// warna sederhana untuk kategori cuaca (opsional)
-function colorForWeather(desc){
-  if(!desc) return '';
-  const s = desc.toLowerCase();
-  if(s.includes('ringan')) return '#b7f0b7'; // hijau muda
-  if(s.includes('sedang')) return '#fff59d'; // kuning
-  if(s.includes('lebat') && !s.includes('sangat')) return '#ffd19a'; // oranye
-  if(s.includes('sangat lebat')) return '#ff9a9a'; // merah muda
-  if(s.includes('ekstrem')) return '#b39ddb'; // ungu
-  if(s.includes('cerah')) return '#d9f1ff'; // biru muda
-  if(s.includes('berawan')) return '#ececec'; // abu
-  return '';
-}
+  <script>
+  let RAW = null;
+  let chart = null;
 
-// ---------- main ----------
-document.getElementById('btnLoad').addEventListener('click', loadAndRender);
-
-async function loadAndRender(){
-  const filename = document.getElementById('jsonFile').value.trim() || 'prakiraan_kabupaten_full3jam.json';
-  const status = document.getElementById('status');
-  const container = document.getElementById('container');
-  container.innerHTML = '';
-  status.textContent = '🔄 Mengambil ' + filename + ' ... (periksa console jika gagal)';
-  try{
-    const res = await fetch(filename, {cache:'no-store'});
-    const ctype = res.headers.get('content-type') || '';
-    const text = await res.text();
-    console.log('fetch response content-type:', ctype);
-    // quick sanity: if response looks like HTML it's likely a 404/403 page
-    if(ctype.indexOf('application/json') === -1){
-      // but don't assume — try parse anyway after cleaning BOM; if fails, show preview
-    }
-
-    // hapus BOM bila ada
-    const cleaned = text.replace(/^\uFEFF/, '');
-    let data;
-    try{
-      data = JSON.parse(cleaned);
-    }catch(parseErr){
-      console.error('JSON parse error:', parseErr);
-      status.innerHTML = `<span style="color:red">❌ Gagal parse JSON: ${escapeHtml(parseErr.message)}</span>`;
-      // tampilkan preview respons (potongan)
-      container.innerHTML = `<div><b>Preview respons (potongan):</b></div><pre class="err">${escapeHtml(text.slice(0,2000))}</pre>`;
+  async function loadAndPrepare(fileName){
+    try {
+      console.log("📥 Fetching:", fileName);
+      const res = await fetch(fileName, {cache:'no-store'});
+      if(!res.ok) throw new Error('HTTP '+res.status+' — '+res.statusText);
+      RAW = await res.json();
+      console.log("✅ Data berhasil dimuat", RAW);
+    } catch(err) {
+      alert('❌ Gagal load JSON: '+err.message);
+      console.error("Gagal load JSON:", err);
       return;
     }
-
-    // success
-    status.innerHTML = `✅ JSON dimuat — jumlah kabupaten: ${Object.keys(data).length}`;
-
-    // build set of all times
-    const timesSet = new Set();
-    for(const kab in data){
-      const slots = data[kab];
-      if(!slots || typeof slots !== 'object') continue;
-      Object.keys(slots).forEach(k => timesSet.add(k));
-    }
-    // convert to array and sort by parsed datetime (fallback to lexical)
-    const timesArr = Array.from(timesSet);
-    timesArr.sort((a,b)=>{
-      const da = parseLabelDate(a), db = parseLabelDate(b);
-      if(da && db) return da - db;
-      if(da && !db) return -1;
-      if(!da && db) return 1;
-      return a.localeCompare(b);
-    });
-
-    // build table header
-    let html = '<div style="overflow:auto"><table><thead><tr><th>Kabupaten</th>';
-    for(const t of timesArr) html += `<th>${escapeHtml(t)}</th>`;
-    html += '</tr></thead><tbody>';
-
-    // rows
-    const kabNames = Object.keys(data).sort((a,b) => a.localeCompare(b));
-    for(const kab of kabNames){
-      html += `<tr><td class="kab">${escapeHtml(kab)}</td>`;
-      for(const t of timesArr){
-        const val = data[kab] && data[kab][t] ? data[kab][t].cuaca : '-';
-        const color = colorForWeather(val);
-        const style = color ? ` style="background:${color}"` : '';
-        html += `<td${style}>${escapeHtml(val)}</td>`;
-      }
-      html += '</tr>';
-    }
-    html += '</tbody></table></div>';
-    container.innerHTML = html;
-
-  }catch(err){
-    console.error('Fetch/parsing error:', err);
-    status.innerHTML = `<span style="color:red">❌ Gagal fetch atau proses: ${escapeHtml(err.message)}</span>`;
-    container.innerHTML = `<pre class="err">Check console for details.\n${escapeHtml(String(err))}</pre>`;
+    populateKabupatenSelect();
+    document.getElementById('metaInfo').textContent = `Terbaca ${Object.keys(RAW).length} kabupaten`;
   }
-}
 
-// auto-load on open
-window.addEventListener('load', ()=> {
-  // try auto-load (comment this out if you prefer manual)
-  // loadAndRender();
-});
-</script>
+  function populateKabupatenSelect(){
+    const sel = document.getElementById('kabSelect');
+    sel.innerHTML = '';
+    const names = Object.keys(RAW).sort((a,b)=>a.localeCompare(b));
+    names.forEach(n => {
+      const opt = document.createElement('option'); opt.value = n; opt.textContent = n;
+      sel.appendChild(opt);
+    });
+    sel.addEventListener('change', ()=> renderForKabupaten(sel.value));
+    if(names.length) renderForKabupaten(names[0]);
+  }
+
+  function renderForKabupaten(kab){
+    const tbody = document.getElementById('tbody');
+    tbody.innerHTML = '';
+    const slotMap = RAW[kab] || {};
+    const rows = [];
+    for(const label in slotMap){
+      const v = slotMap[label];
+      rows.push({label, cuaca:v.cuaca ?? '-', suhu:v.suhu ?? '-', hum:v.hum ?? '-'});
+    }
+    if(!rows.length){
+      tbody.innerHTML = '<tr><td colspan="4" class="small muted">Tidak ada data</td></tr>';
+      return;
+    }
+    const html = rows.map(r => `<tr>
+      <td>${r.label}</td>
+      <td>${r.cuaca}</td>
+      <td class="right">${r.suhu}</td>
+      <td class="right">${r.hum}</td>
+    </tr>`).join('');
+    tbody.innerHTML = html;
+    document.getElementById('slotCount').textContent = rows.length;
+  }
+
+  // event
+  document.getElementById('loadBtn').addEventListener('click', ()=>{
+    const f = document.getElementById('dataFile').value.trim();
+    loadAndPrepare(f);
+  });
+  </script>
 </body>
 </html>
