--- a/index.html
+++ b/index.html
@@ -21,18 +21,8 @@
     canvas{max-width:100%}
     .download {margin-left:auto}
     @media(max-width:940px){ .layout{grid-template-columns:1fr} }
-
-    /* --- Style tombol --- */
-    button {
-      background:#2c7be5;
-      color:#fff;
-      border:none;
-      border-radius:6px;
-      cursor:pointer;
-      font-weight:600;
-      box-shadow:0 2px 4px rgba(0,0,0,0.1);
-      transition:background 0.2s;
-    }
+    button { background:#2c7be5; color:#fff; border:none; border-radius:6px; cursor:pointer;
+      font-weight:600; box-shadow:0 2px 4px rgba(0,0,0,0.1); transition:background 0.2s; }
     button:hover { background:#1a5fb4; }
   </style>
 </head>
@@ -68,7 +58,7 @@
       <div style="overflow:auto;max-height:560px">
         <table id="table">
           <thead>
-            <tr><th>Waktu (start–end)</th><th>Cuaca</th><th class="right">Suhu (°C)</th><th class="right">Kelembapan (%)</th></tr>
+            <tr><th>Waktu (Lokal)</th><th>Cuaca</th><th class="right">Suhu (°C)</th><th class="right">Kelembapan (%)</th></tr>
           </thead>
           <tbody id="tbody">
             <tr><td colspan="4" class="small">Belum ada data — klik "Muat Data"</td></tr>
@@ -86,9 +76,7 @@
     </div>
   </div>
 
-  <!-- Chart.js CDN -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
   <script>
   let RAW = null;
   let chart = null;
@@ -121,19 +109,52 @@
     if(names.length) renderForKabupaten(names[0]);
   }
 
+  // Fungsi parse label jadi objek Date
+  function parseLabelDate(label){
+    if(!label) return null;
+    const parts = label.trim().split(" ");
+    if(parts.length < 3) return null;
+
+    const day = parseInt(parts[0]);
+    const monthStr = parts[1].toLowerCase();
+    const time = parts[2];
+    const year = (parts.length === 4) ? parseInt(parts[2]) : (new Date()).getFullYear();
+
+    const bulan = {
+      jan:0,feb:1,mar:2,apr:3,mei:4,jun:5,
+      jul:6,aug:7,sep:8,oct:9,nov:10,dec:11
+    };
+
+    const mon = bulan[monthStr.slice(0,3)];
+    if(mon === undefined) return null;
+
+    let [hh,mm] = time.split(":").map(x=>parseInt(x));
+    return new Date(year, mon, day, hh, mm);
+  }
+
   function renderForKabupaten(kab){
     const tbody = document.getElementById('tbody');
     tbody.innerHTML = '';
     const slotMap = RAW[kab] || {};
-    const rows = [];
+    let rows = [];
     for(const label in slotMap){
       const v = slotMap[label];
       rows.push({label, cuaca:v.cuaca ?? '-', suhu:v.suhu ?? '-', hum:v.hum ?? '-'});
     }
+
+    // sort rows berdasarkan tanggal
+    rows.sort((a,b)=>{
+      const da = parseLabelDate(a.label);
+      const db = parseLabelDate(b.label);
+      if(da && db) return da - db;
+      return a.label.localeCompare(b.label);
+    });
+
     if(!rows.length){
       tbody.innerHTML = '<tr><td colspan="4" class="small muted">Tidak ada data</td></tr>';
       return;
     }
+
     const html = rows.map(r => `<tr>
       <td>${r.label}</td>
       <td>${r.cuaca}</td>
@@ -144,7 +165,6 @@
     document.getElementById('slotCount').textContent = rows.length;
   }
 
-  // event
   document.getElementById('loadBtn').addEventListener('click', ()=>{
     const f = document.getElementById('dataFile').value.trim();
     loadAndPrepare(f);
