--- a/index.html
+++ b/index.html
@@ -2,173 +2,173 @@
 <html lang="id">
 <head>
   <meta charset="utf-8" />
-  <title>Viewer Prakiraan (3-jam) — Per Kabupaten</title>
+  <title>Viewer Prakiraan Cuaca</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
     body{font-family:system-ui,Arial,Segoe UI,Roboto; margin:16px; background:#f6f8fb; color:#111}
     h1{margin:0 0 8px;text-align:center}
     .top {display:flex;gap:12px;align-items:center;justify-content:center;flex-wrap:wrap;margin-bottom:12px}
     select,input,button{padding:8px 10px;border-radius:8px;border:1px solid #d0d7e0}
-    .layout {display:grid; grid-template-columns: 1fr 480px; gap:16px; align-items:start}
     .card {background:#fff;border-radius:10px;padding:12px;box-shadow:0 4px 18px rgba(18,38,63,0.06)}
-    table{width:100%;border-collapse:collapse;font-size:13px}
+    table{width:100%;border-collapse:collapse;font-size:13px;margin-top:8px}
     th,td{padding:8px 6px;border-bottom:1px solid #eee;text-align:left}
     th{background:#f3f6fb;position:sticky;top:0}
     .small{font-size:12px;color:#666}
-    .right{text-align:right}
     .muted{color:#666;font-size:13px}
-    .controls-row{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
-    canvas{max-width:100%}
-    .download {margin-left:auto}
-    @media(max-width:940px){ .layout{grid-template-columns:1fr} }
-    button { background:#2c7be5; color:#fff; border:none; border-radius:6px; cursor:pointer;
-      font-weight:600; box-shadow:0 2px 4px rgba(0,0,0,0.1); transition:background 0.2s; }
+    button {
+      background:#2c7be5;color:#fff;border:none;border-radius:6px;cursor:pointer;font-weight:600;
+    }
     button:hover { background:#1a5fb4; }
   </style>
 </head>
 <body>
-  <h1>Prakiraan Cuaca Per Kabupaten (slot 3-jam)</h1>
+  <h1>Prakiraan Cuaca Per Kabupaten</h1>
 
-  <div class="top">
-    <div class="controls-row card">
-      <label>File JSON:
-        <input id="dataFile" type="text" value="prakiraan_kabupaten_full3jam.json" style="width:260px" />
-      </label>
-      <button id="loadBtn">Muat Data</button>
+  <div class="top card">
+    <label>File JSON:
+      <input id="dataFile" type="text" value="prakiraan_kabupaten_full3jam.json" style="width:260px" />
+    </label>
+    <button id="loadBtn">Muat Data</button>
 
-      <label>Kabupaten:
-        <select id="kabSelect" style="min-width:260px"></select>
-      </label>
+    <label>Kabupaten:
+      <select id="kabSelect" style="min-width:260px"></select>
+    </label>
 
-      <label>Filter cuaca:
-        <input id="filterCuaca" placeholder="kata kunci cuaca (mis. Hujan)" />
-      </label>
+    <label>Mode Tampilan:
+      <select id="modeSelect">
+        <option value="slot">Slot 3-jam</option>
+        <option value="harian">Agregasi Harian</option>
+      </select>
+    </label>
+  </div>
 
-      <button id="toCsv" class="download">Download CSV</button>
+  <div class="card">
+    <div style="display:flex;justify-content:space-between;margin-bottom:8px">
+      <div class="muted" id="metaInfo">Belum memuat data</div>
+      <div class="small">Jumlah baris: <span id="rowCount">0</span></div>
+    </div>
+
+    <div style="overflow:auto;max-height:560px">
+      <table id="table">
+        <thead id="thead"></thead>
+        <tbody id="tbody">
+          <tr><td colspan="4" class="small muted">Belum ada data — klik "Muat Data"</td></tr>
+        </tbody>
+      </table>
     </div>
   </div>
 
-  <div class="layout">
-    <div class="card">
-      <div style="display:flex;gap:12px;align-items:center;justify-content:space-between;margin-bottom:8px">
-        <div class="muted" id="metaInfo">Belum memuat data</div>
-        <div class="small">Jumlah slot: <span id="slotCount">0</span></div>
-      </div>
+<script>
+let RAW = null;
 
-      <div style="overflow:auto;max-height:560px">
-        <table id="table">
-          <thead>
-            <tr><th>Waktu (Lokal)</th><th>Cuaca</th><th class="right">Suhu (°C)</th><th class="right">Kelembapan (%)</th></tr>
-          </thead>
-          <tbody id="tbody">
-            <tr><td colspan="4" class="small">Belum ada data — klik "Muat Data"</td></tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
+// prioritas cuaca
+const priority = {
+  "Hujan Lebat": 5,
+  "Hujan Sedang": 4,
+  "Hujan Ringan": 3,
+  "Berawan": 2,
+  "Cerah Berawan": 2,
+  "Cerah": 1
+};
+function pilihCuaca(arr){
+  if(!arr.length) return "-";
+  return arr.reduce((a,b)=> (priority[b]||0)>(priority[a]||0)?b:a,"-");
+}
 
-    <div class="card">
-      <div style="margin-bottom:8px">
-        <div class="small">Grafik suhu & kelembapan (min/max)</div>
-      </div>
-      <canvas id="chart" height="300"></canvas>
-      <div style="margin-top:10px" class="small muted">Catatan: jika rentang suhu/kelembapan kosong, titik dihilangkan.</div>
-    </div>
-  </div>
+// parsing tanggal dari label
+function extractDate(label){
+  const m = label.match(/(\d{2}) (\w{3}) (\d{4})/); // ex: 05 Sep 2025
+  return m ? m[0] : label;
+}
 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script>
-  let RAW = null;
-  let chart = null;
+async function loadAndPrepare(fileName){
+  try {
+    const res = await fetch(fileName,{cache:'no-store'});
+    if(!res.ok) throw new Error("HTTP "+res.status);
+    RAW = await res.json();
+  } catch(e){
+    alert("Gagal load JSON: "+e.message);
+    return;
+  }
+  populateKabupatenSelect();
+  document.getElementById("metaInfo").textContent = 
+    `Terbaca ${Object.keys(RAW).length} kabupaten`;
+}
 
-  async function loadAndPrepare(fileName){
-    try {
-      console.log("📥 Fetching:", fileName);
-      const res = await fetch(fileName, {cache:'no-store'});
-      if(!res.ok) throw new Error('HTTP '+res.status+' — '+res.statusText);
-      RAW = await res.json();
-      console.log("✅ Data berhasil dimuat", RAW);
-    } catch(err) {
-      alert('❌ Gagal load JSON: '+err.message);
-      console.error("Gagal load JSON:", err);
-      return;
+function populateKabupatenSelect(){
+  const sel = document.getElementById("kabSelect");
+  sel.innerHTML="";
+  const names = Object.keys(RAW).sort();
+  names.forEach(n=>{
+    const opt=document.createElement("option");
+    opt.value=n; opt.textContent=n;
+    sel.appendChild(opt);
+  });
+  sel.addEventListener("change",()=>renderForKabupaten(sel.value));
+  document.getElementById("modeSelect").addEventListener("change",()=>renderForKabupaten(sel.value));
+  if(names.length) renderForKabupaten(names[0]);
+}
+
+function renderForKabupaten(kab){
+  const mode = document.getElementById("modeSelect").value;
+  const tbody=document.getElementById("tbody");
+  const thead=document.getElementById("thead");
+  tbody.innerHTML="";
+  const slotMap = RAW[kab]||{};
+  let rows=[];
+
+  if(mode==="slot"){ // tampil slot 3 jam
+    thead.innerHTML="<tr><th>Waktu</th><th>Cuaca</th><th>Suhu (°C)</th><th>Kelembapan (%)</th></tr>";
+    for(const label of Object.keys(slotMap)){
+      const v=slotMap[label];
+      rows.push({label,cuaca:v.cuaca,suhu:v.suhu,hum:v.hum});
     }
-    populateKabupatenSelect();
-    document.getElementById('metaInfo').textContent = `Terbaca ${Object.keys(RAW).length} kabupaten`;
+  } else { // agregasi harian
+    thead.innerHTML="<tr><th>Tanggal</th><th>Cuaca Dominan</th><th>Suhu (°C)</th><th>Kelembapan (%)</th></tr>";
+    const perHari={};
+    for(const label of Object.keys(slotMap)){
+      const v=slotMap[label];
+      const tanggal = extractDate(label);
+      if(!perHari[tanggal]) perHari[tanggal]={cuaca:[],suhu:[],hum:[]};
+      perHari[tanggal].cuaca.push(v.cuaca);
+      // parse suhu/hum range "22–25"
+      if(v.suhu && v.suhu.includes("–")){
+        const [a,b]=v.suhu.split("–").map(Number);
+        if(!isNaN(a)&&!isNaN(b)){ perHari[tanggal].suhu.push(a,b); }
+      }
+      if(v.hum && v.hum.includes("–")){
+        const [a,b]=v.hum.split("–").map(Number);
+        if(!isNaN(a)&&!isNaN(b)){ perHari[tanggal].hum.push(a,b); }
+      }
+    }
+    for(const tgl of Object.keys(perHari)){
+      const d=perHari[tgl];
+      const cuaca=pilihCuaca(d.cuaca);
+      const suhu=d.suhu.length? `${Math.min(...d.suhu)}–${Math.max(...d.suhu)}`:"-";
+      const hum=d.hum.length? `${Math.min(...d.hum)}–${Math.max(...d.hum)}`:"-";
+      rows.push({label:tgl, cuaca, suhu, hum});
+    }
   }
 
-  function populateKabupatenSelect(){
-    const sel = document.getElementById('kabSelect');
-    sel.innerHTML = '';
-    const names = Object.keys(RAW).sort((a,b)=>a.localeCompare(b));
-    names.forEach(n => {
-      const opt = document.createElement('option'); opt.value = n; opt.textContent = n;
-      sel.appendChild(opt);
-    });
-    sel.addEventListener('change', ()=> renderForKabupaten(sel.value));
-    if(names.length) renderForKabupaten(names[0]);
-  }
-
-  // Fungsi parse label jadi objek Date
-  function parseLabelDate(label){
-    if(!label) return null;
-    const parts = label.trim().split(" ");
-    if(parts.length < 3) return null;
-
-    const day = parseInt(parts[0]);
-    const monthStr = parts[1].toLowerCase();
-    const time = parts[2];
-    const year = (parts.length === 4) ? parseInt(parts[2]) : (new Date()).getFullYear();
-
-    const bulan = {
-      jan:0,feb:1,mar:2,apr:3,mei:4,jun:5,
-      jul:6,aug:7,sep:8,oct:9,nov:10,dec:11
-    };
-
-    const mon = bulan[monthStr.slice(0,3)];
-    if(mon === undefined) return null;
-
-    let [hh,mm] = time.split(":").map(x=>parseInt(x));
-    return new Date(year, mon, day, hh, mm);
-  }
-
-  function renderForKabupaten(kab){
-    const tbody = document.getElementById('tbody');
-    tbody.innerHTML = '';
-    const slotMap = RAW[kab] || {};
-    let rows = [];
-    for(const label in slotMap){
-      const v = slotMap[label];
-      rows.push({label, cuaca:v.cuaca ?? '-', suhu:v.suhu ?? '-', hum:v.hum ?? '-'});
-    }
-
-    // sort rows berdasarkan tanggal
-    rows.sort((a,b)=>{
-      const da = parseLabelDate(a.label);
-      const db = parseLabelDate(b.label);
-      if(da && db) return da - db;
-      return a.label.localeCompare(b.label);
-    });
-
-    if(!rows.length){
-      tbody.innerHTML = '<tr><td colspan="4" class="small muted">Tidak ada data</td></tr>';
-      return;
-    }
-
-    const html = rows.map(r => `<tr>
+  if(!rows.length){
+    tbody.innerHTML='<tr><td colspan="4" class="small muted">Tidak ada data</td></tr>';
+  } else {
+    rows.sort((a,b)=> a.label.localeCompare(b.label));
+    tbody.innerHTML = rows.map(r=>`<tr>
       <td>${r.label}</td>
       <td>${r.cuaca}</td>
-      <td class="right">${r.suhu}</td>
-      <td class="right">${r.hum}</td>
-    </tr>`).join('');
-    tbody.innerHTML = html;
-    document.getElementById('slotCount').textContent = rows.length;
+      <td>${r.suhu}</td>
+      <td>${r.hum}</td>
+    </tr>`).join("");
   }
+  document.getElementById("rowCount").textContent=rows.length;
+}
 
-  document.getElementById('loadBtn').addEventListener('click', ()=>{
-    const f = document.getElementById('dataFile').value.trim();
-    loadAndPrepare(f);
-  });
-  </script>
+// event
+document.getElementById("loadBtn").addEventListener("click",()=>{
+  const f=document.getElementById("dataFile").value.trim();
+  loadAndPrepare(f);
+});
+</script>
 </body>
 </html>
